# todo_api

./: .env  Cargo.toml  LICENSE
docker/: compose.yaml
migrations/: 20230522134748_init.sql
src/: main.rs
src/domain/: error.rs
src/domain/entity/: task.rs
src/domain/repository/: task_repository.rs
src/infrastructure/: repository.rs
src/infrastructure/repository/: error.rs  task_repository.rs
src/use_case/: task.rs
