[package]
name = "todo_api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.71", features = ["backtrace"] }
async-trait = "0.1.68"
dotenv = "0.15.0"
mockall = "0.11.4"
sqlx = { version = "0.6.3", features = ["runtime-tokio-rustls", "postgres"] }
thiserror = "1.0.40"
tokio = { version = "1.28.1", features = ["full"] }
validator = { version = "0.16.0", features = ["derive"] }